2008-01-02  Denis Washington  <denisw@svn.gnome.org>

	* gnome-settings-accessibility-keyboard.c: Only consider
	/desktop/gnome/accessibility/keyboard/enable as option
	for enabling keyboard a11y features from the keyboard,
	not as global switch to turn all a11y features on/off.

2007-12-24  Christian Persch  <chpe@gnome.org>

	* gnome-settings-xsettings.c: Add Gtk/IMModule XSetting. Bug #504182,
	patch by Akira TAGOH.

2007-12-06  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Matthias Clasen <mclasen@redhat.com>

	As a stop-gap measure, until we've got a proper search interface,
	simply check whether beagle or tracker are installed, and prefer them
	to gnome-search-tool if they are (bug #497802)

	* gnome-settings-multimedia-keys.c: (do_action): prefer beagle and
	tracker to gnome-search-tool

2007-12-06  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-xsettings.c: use new setting from libgnome to make
	toolbar icon size setting work (bug #401030)

2007-11-28  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-multimedia-keys.c: (do_action): launch Nautilus with
	--no-desktop for the home key so we don't mess up the desktop for
	people using something else to manage the background (bug #500085)

2007-11-18  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Dan Winship <danw@novell.com>
	          Lucas Rocha <lucasr@gnome.org>

	* Makefile.am:
	* gnome-settings-daemon.c: (gnome_settings_daemon_init):
	* gnome-settings-xrandr.c: move display settings here from
	gnome-session (bug #434982)

2007-11-18  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Bastien Nocera <hadess@hadess.net>

	* gnome-settings-multimedia-keys.c: allow key bindings using Super and
	Meta combinations (bug #165343)

2007-11-11  Jens Granseuer  <jensgr@gmx.net>

	* gsd-media-keys-window.c: (gsd_media_keys_window_init): slightly
	increase the popup window size again (130x130 at 640x480 and scaled
	from there)

2007-11-10  Jens Granseuer  <jensgr@gmx.net>
