@@ -1,3 +1,10 @@
+2008-01-05  Denis Washington  <denisw@svn.gnome.org>
+
+	* gnome-settings-accessibility-keyboard.c: Don't depend on
+	/desktop/gnome/accessibility/keyboard/enable for setting
+	the AccessXFeedback flag; instead, set it if one of the
+	notification bits is enabled.
+
 2008-01-02  Denis Washington  <denisw@svn.gnome.org>
 
 	* gnome-settings-accessibility-keyboard.c: Only consider
